<resources>
    <string name="app_name">MADE_Submission1</string>
    <string name="about">About</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama">Nama : Tampan dan Berani</string>
    <string name="email">Email : tampan@gmail.com</string>
    <string name="no_hp">No. Hp : 081234567890</string>
    <string name="main_image_desc">This is main image of detail</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequuntur, corporis facilis ipsam iusto modi mollitia necessitatibus nulla numquam obcaecati odio pariatur provident qui quibusdam reprehenderit, similique unde ut voluptatem.</string>
    <string name="image_button_for_favorite">Image button for favorite</string>
    <string name="title">Title</string>
    <string name="image_for_item_or_for_movies">Image for item or for movies</string>
    <string name="empty">Data is Empty</string>

    //Detail Info
    <string name="vote_average">Vote Average : %1$s</string>
    <string name="vote_count">Vote Count : %1$s</string>
    <string name="language">Language : %1$s</string>
    <string name="release_date">Release Date : %1$s</string>
    <string name="title_favorite">Favorite</string>
    <string name="director">Director</string>
    <string name="year">Year</string>
    <string name="description">Description</string>
    <string name="favorite_button">Favorite Button</string>

    <string name="power_connected">Power connected!</string>
    <string name="power_disconnected">Power disconnected!</string>
</resources>