<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailMoviesActivity">

    <ImageView
        android:id="@+id/iv_detail_movie"
        android:src="@drawable/profile"
        android:layout_width="145dp"
        android:layout_height="200dp"
        android:contentDescription="@string/main_image_desc" />

    <TextView
        android:id="@+id/tv_title_detail_movie"
        android:layout_marginTop="24dp"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/iv_detail_movie"
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_vote_average_detail_movie"
        android:layout_below="@id/tv_title_detail_movie"
        android:layout_toEndOf="@id/iv_detail_movie"
        android:layout_margin="8dp"
        android:textSize="14sp"
        android:text="@string/vote_average"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_vote_count_detail_movie"
        android:layout_toEndOf="@id/iv_detail_movie"
        android:layout_below="@id/tv_vote_average_detail_movie"
        android:layout_margin="8dp"
        android:textSize="14sp"
        android:text="@string/vote_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_language_detail_movie"
        android:layout_toEndOf="@id/iv_detail_movie"
        android:layout_below="@id/tv_vote_count_detail_movie"
        android:layout_margin="8dp"
        android:textSize="14sp"
        android:text="@string/director"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_year_detail_movie"
        android:layout_toEndOf="@id/iv_detail_movie"
        android:layout_below="@id/tv_language_detail_movie"
        android:layout_margin="8dp"
        android:textSize="14sp"
        android:text="@string/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tv_description_title"
        android:layout_marginVertical="16dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/description"
        android:layout_below="@id/iv_detail_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_description"
        android:textSize="14sp"
        android:text="@string/lorem"
        android:layout_below="@id/tv_description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/favorite_button" />

</RelativeLayout>