<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AboutFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:src="@drawable/profile"
        android:layout_width="96dp"
        android:layout_height="96dp"/>

    <TextView
        android:layout_marginVertical="16dp"
        android:text="@string/nama"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/email"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/no_hp"
        android:textSize="16sp"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>